# eumovie

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: fulldome.md  index.md  installation.md  keyframes.md  options.md  quickstart.md  technical.md
src/eumovie/: __init__.py  eumovie.py  eumovie.py~  keyframes_default.py  keyframes_default.py~
